# BilibiliCommentAsDataset

./: LICENSE  bvid.py  comments.csv  main.py  pyproject.toml  videolist.json5
.github/workflows/: build.yaml  python-app.yml
